@@ -4,6 +4,8 @@
 [+] Add IMessagePipelinePostAction interface. The handler will be executed after all middleware execution.
 [+] Optimize handlers resolving.
 [*] Do not resolve object hanlders public properties by default, set UsePropertiesResolving to true for this.
+[+] Generic commands.
+[+] Generic events.
 
 0.3.0 [2017-08-07]
 [*] Fix AddQueryPipeline method.
